# LanMind

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LanMind_澜灵_项目完整说明书_Codex版.docx  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.vue  style.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/migrations/: 0001_init.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/architecture/: email-service.md  overview.md
docs/product/: mvp-0.1.md
