[package]
name = "lanmind-desktop"
version = "0.1.1"
description = "LanMind desktop shell"
authors = ["LanMind contributors"]
edition = "2021"

[lib]
name = "lanmind_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
